--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@escook/express-joi": "^1.1.1",
     "@hapi/joi": "^17.1.0",
     "@koa/router": "^12.0.0",
+    "@vee-validate/i18n": "^4.7.4",
+    "@vee-validate/rules": "^4.7.4",
+    "@vueuse/core": "^9.13.0",
+    "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -25,12 +29,16 @@
     "koa-router": "^12.0.0",
     "less": "^4.1.3",
     "mysql": "^2.18.1",
+    "nprogress": "^0.2.0",
     "path": "^0.12.7",
     "reflect-metadata": "^0.1.13",
     "swiper": "^9.0.5",
     "typeorm": "^0.3.12",
+    "vee-validate": "^4.5.8",
     "vue": "^3.2.45",
-    "vue-router": "^4.0.13"
+    "vue-i18n": "^9.2.2",
+    "vue-router": "^4.0.13",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
