--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-jwt": "^8.4.1",
     "intersection-observer": "^0.12.2",
     "joi": "^17.8.3",
+    "js-cookie": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
     "koa": "^2.14.1",
     "koa-bodyparser": "^4.3.0",
@@ -32,6 +33,7 @@
     "mysql": "^2.18.1",
     "nprogress": "^0.2.0",
     "path": "^0.12.7",
+    "pinia": "^2.0.33",
     "reflect-metadata": "^0.1.13",
     "swiper": "^9.0.5",
     "typeorm": "^0.3.12",
