--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "nprogress": "^0.2.0",
     "path": "^0.12.7",
     "pinia": "^2.0.33",
+    "qrcode": "^1.5.1",
     "reflect-metadata": "^0.1.13",
     "swiper": "^9.0.5",
     "typeorm": "^0.3.12",
